[project]
name = "datam"
version = "0.1.0"
description = "A data modelling tool."
dependencies = [
  "pydantic~=2.7",
]
requires-python = ">= 3.8"
authors = [
  {name = "Mrinal Kanti Sardar"},
]
readme = "README.rst"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  # "Programming Language :: Python :: 3.12",
]
keywords = [
  "pipeline",
  "data modeler",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "flake8",
  "coverage",
  "black",
  "isort",
  "pytest-cov",
  "faker",
  "bump-my-version",
  "build",
  "twine",
]

[project.urls]
Homepage = "https://github.com/mrinalsardar/datam"
Documentation = "https://github.com/mrinalsardar/datam"
Repository = "https://github.com/mrinalsardar/datam.git"
Issues = "https://github.com/mrinalsardar/datam/issues"
# Changelog = "https://github.com/mrinalsardar/datam/blob/master/CHANGELOG.md"

[build-system]
requires = ["setuptools >= 69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["datam"]

[tool.black]
line-length = 90
target-version = ["py38", "py39", "py310", "py311"]
exclude = '''

(
  /(
      \.git          # exclude a few common directories in the
    | \.github       # root of the project
    | \.pytest_cache
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.coverage.run]
branch = true
source = ["datam"]


[tool.isort]
profile = "black"
line_length = 90
skip = [".gitignore"]

[tool.bumpversion]
current_version = "0.7.8"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "pyproject.toml"